Добавить работу с базой данных в уже реализованную часть проекта, а также дать пользователям возможность бронировать вещи